--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 		
+		<dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+    	
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -44,6 +49,7 @@
       		<groupId>org.thymeleaf.extras</groupId>
       		<artifactId>thymeleaf-extras-springsecurity5</artifactId>
     	</dependency>
+    	
     	<dependency>
 		<groupId>nz.net.ultraq.thymeleaf</groupId>
 <artifactId>thymeleaf-layout-dialect</artifactId>
